# world-model-eval

./: README.md  pyproject.toml
src/world_model_eval/: __init__.py  diffusion.py  model.py  run_octo.py  run_openvla.py  run_rt1.py  run_spatialvla.py  train.py  utils.py  world_model.py
src/world_model_eval/rt1/: __init__.py  efficientnet.py  film_conditioning.py  rt1.py  token_learner.py
